--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,9 @@
       "es2018",
       "dom"
     ]
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "preserveWhitespaces": true
   }
 }
